--- a/src/main/ui/ui/src/styles/CalendarStyles.css
+++ b/src/main/ui/ui/src/styles/CalendarStyles.css
@@ -3,3 +3,10 @@
     width: 100%;
     height: 100vh;     /*why*/
 }
+
+#days{
+    display: flex;
+    justify-content: space-between;
+    border: 3px solid black;
+}
+
