--- a/src/main/ui/ui/src/styles/CalendarStyles.css
+++ b/src/main/ui/ui/src/styles/CalendarStyles.css
@@ -13,7 +13,7 @@
     border: 1px solid rgb(0, 0, 0);
     width: 17%;
     height: 16.6vh;
-    color: #000;
+    color: #68a217;
     font-weight: bold;
     font-size: 31px;
 }
@@ -22,7 +22,7 @@
     border: 1px solid rgb(0, 0, 0);
     width: 17%;
     height: 16.6vh;
-    color: #808080;
+    color: #d73a3a;
     opacity: 0.4;
     font-weight: bold;
     font-size: 31px;
